Revert "fix(cards): align incomplete card rows left (#334)"
This reverts commit 8709553c04517a1377bb8fcb6c7817e05f08ab1c.

--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@
    min-width: 300px;
    display: flex;
    flex-flow: row wrap;
+   justify-content: center;
  }
  
  .card {
